# kanshou

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: auto-release.yml
crates/kanshou/: Cargo.toml
crates/kanshou-derive/: Cargo.toml
crates/kanshou-derive/src/: lib.rs
crates/kanshou/src/: client.rs  lib.rs  mcp.rs  path.rs
crates/kanshou/tests/: derive.rs  roundtrip.rs
docs/: RETROFIT-COOKBOOK.md
src/: lib.rs  server.rs  types.rs
