[package]
name = "kanshou"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Kanshou (観照) — live process introspection over Unix sockets. Every pleme-io binary exposes its typed AppState; MCP servers and operator tools forward queries through it. Closes the 'I have an MCP but no wire into the live process' class fleet-wide."
homepage = "https://github.com/pleme-io/kanshou"
repository = "https://github.com/pleme-io/kanshou"
documentation = "https://docs.rs/kanshou"
readme = "README.md"
license = "MIT"
authors = ["pleme-io"]
categories = ["development-tools::debugging", "asynchronous"]
keywords = ["introspection", "ipc", "unix-socket", "mcp", "pleme-io"]

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
