[workspace]
resolver = "2"
members = ["crates/kanshou", "crates/kanshou-derive"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
homepage = "https://github.com/pleme-io/kanshou"
repository = "https://github.com/pleme-io/kanshou"
authors = ["pleme-io"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
